--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -308,7 +308,7 @@ Der Papierprototyp wurde für den Use Case Informationen anzeigen entwickelt, da
 Für das Anzeigen von weiteren Informationen wird eine Slideshow umgesetzt. Die Benutzung der Slideshow erfolgt durch das Wischen nach Links und Rechts, wobei die Überschriften das Vorwissen des Nutzers anregen sollen, dass weitere Informationen durch das Wischen angezeigt werden können. Die Slideshow wurde nach den Grundsätzen der Dialoggestaltung nach der Erwartungskonformität gewählt. Die Slideshow dient zur Navigation, mit der sich mehrere Informationen zu einem Hintergrundbild, wie den Archeopteryx anzeigen lassen können.\\
 
 %TODO
-%Adrians Prototyp Beschreibung plus Bild und deren Designentscheidung Bezug nehmen zu Vorlesung
+%Adrians Prototyp Beschreibung plus Bild und deren Designentscheidung Bezug nehmen zur Vorlesung
 %Zwei weitere Prototypen beschreiben und deren Designentscheidung Bezug nehmen zu Vorlesung; evtl zu jedem Prototyp ein Bild
 %Nach den Grundsätzen der Dialoggestaltung
 %Erwartungskonformität: Slideshow zur Navigation zu weiteren Informationen. Anzeige Punkte, die farblich hervorgehoben werden als Ankerpunkt. Wischen für weitere Informationen andere Ansicht. Scrollen Anzeige Scrollbar rechts. 
@@ -322,6 +322,17 @@ Für das Anzeigen von weiteren Informationen wird eine Slideshow umgesetzt. Die 
 %Gesetz der Verbundenheit:
 
 %Gesetz der Einfachheit:
+
+In der zweiten Variante der Papierprototypen wurde als zentrales Element ein tangible Interface verwendet. Zusätzlich zu dem TI, gibt es eine AR Brille mit einem Exponat und einem QR-Code. Die Brille ist in der Lage den QR-Code zu scannen um das Exponat virtuell auf der AR-Brille anzuzeigen. Das TI ist ein Kugelförmiges Gerät mit diversen verbauten Sensoren. Diese sind ein Gyrosensor, ein Beschleunigungssensor und ein Drucksensor.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[angle=0,scale=0.04]{proto2}
+	\caption{AR Anwendung mit TI}
+	\label{fig:prototype2}
+\end{figure}
+
+Diser Usecase vernachlässigt hauptsächlich den informativen Teil wohin gegen die Userexperience im Vordergrund stehen soll.
 
 \subsection{Heuristische Evaluation}
 Die heuristische Evaluation wurde an der mobilen Anwendung zum Anzeigen von Informationen und der Anwendung zum Anzeigen von Exponaten als 3D-Objekt mit Hilfe eines Tangible Interface vollzogen. Um Usability Probleme zu entdecken, wurden die Heuristiken von Nielson verwendet. Damit lassen sich Eigenschaften des Systems herausfinden, die erfüllt sein müssen, damit die Interaktion für den Nutzer gebrauchstauglich sind.
