first sentence for high fidelity description

--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -405,6 +405,8 @@ Nach der Durchführung der heuristischen Evaluation, entstand die Idee, die Funk
 \section{Prototyping: high fidelity}
 \subsection{Umsetzung des Papierprototypen}
 
+Für die Umsetzung, nach eingehender Diskussion, sind im Team einige Neue Ideen entstanden. Zunächst wurde sich darauf geeinigt die grundlegenden Ideen der ersten beiden Prototypen zusammenzulegen.
+
 \section{Zusammenfassung}
 
 
