add design principles to mobile paper prototype

--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -446,7 +446,7 @@ Die Erwartung, das die allgemeinen Informationen automatisches gescrollt werden,
 
 Das System spricht nicht die Sprache des Nutzers beim Verwenden des Zoommechanismus. Durch die Verwendung der AR-Technologie hat der Nutzer das Gefühl, dass die Interaktion mit dem Objekt genauso funktioniert wie im reelen Leben. Dadurch wird erwartet, dass durch herangehen an das Exponat ein Zoomen möglich ist. Durch hinzufügen einer Informationshilfe wie das Zoomen anzuwenden ist, könnte der Nutzer die Interaktion lernen. Allerdings würde das der Heuristik von Nielson wiedersprechen, dass das System ohne Hilfe auskommen muss.\\
 
-Das nicht erkennen der Funktion Wischen zum Anzeigen von weiteren Informationen lässt den Nutzer in eine Situation geraten aus die er nicht wieder zurück findet. Das wurde anhand der Heuristik Benutzerkontrolle festgestellt. Um die Funktion deutlich zu machen, am unteren Rand kleine Kreise dargestellt, die für jeweils eine Seite stehen. Die Kreise werden zusammen nebeneinander in gleichmäßigen Abstand positioniert, wobei der Kreis farbig dargestellt wird, der die Seite repräsentiert, die gerade angezeigt wird. Durch Wischen wird die nächste Seite angezeigt und der entsprechende Kreis farbig dargestellt. Eine direkte Auswahl der Seite, die angezeigt werden soll, kann durch das Tippen auf den Kreis vollzogen werden.\\
+Das Nicht-Erkennen der Funktion Wischen zum Anzeigen von weiteren Informationen lässt den Nutzer in eine Situation geraten, aus der er nicht wieder zurück findet. Das wurde anhand der Heuristik Benutzerkontrolle festgestellt. Um die Funktion deutlich zu machen, können am unteren Rand kleine Kreise dargestellt werden, die für jeweils eine Seite stehen. Die Kreise werden, unter Anwendung des Gestaltgesetzes der Verbundenheit, zusammen nebeneinander in gleichmäßigen Abstand positioniert. Der Kreis, der die aktuelle Seite repräsentiert, wird farbig dargestellt. Es wurde bewusst das preattentive Feature Farbe gewählt. Durch die Hervorhebung wird der Nutzer schneller auf seine Position in der Anwendunf aufmerksam. Durch Wischen wird die nächste Seite angezeigt und der entsprechende Kreis farbig dargestellt. Eine direkte Auswahl der Seite, die angezeigt werden soll, kann durch das Tippen auf den Kreis vollzogen werden.\\
 
 %TODO
 %Adrians Ergebnisse der heuristischen Analyse  hier einfügen
