prepared for scheduling, zusammenfassung and einleitung are left

--- a/doc/bib.bib
+++ b/doc/bib.bib
@@ -1,10 +1,21 @@
-% This file was created with Citavi 5.5.0.1
+﻿% This file was created with Citavi 5.5.0.1
 
 @proceedings{.2015,
  year = {2015},
- title = {2015 Digital Heritage},
+ title = {Tangible interfaces for digitalmuseum applications},
  publisher = {IEEE},
  isbn = {978-1-5090-0254-2}
+}
+
+
+@proceedings{Adelson.1994,
+ year = {1994},
+ title = {Proceedings of the SIGCHI conference on Human factors in computing systems celebrating interdependence - CHI '94},
+ address = {New York, New York, USA},
+ publisher = {{ACM Press}},
+ isbn = {0897916506},
+ editor = {Adelson, Beth and Dumais, Susan and Olson, Judith},
+ doi = {10.1145/191666}
 }
 
 
@@ -14,7 +25,7 @@
  pages = {271--276},
  publisher = {IEEE},
  isbn = {978-1-5090-0254-2},
- booktitle = {2015 Digital Heritage},
+ booktitle = {Tangible interfaces for digitalmuseum applications},
  year = {2015},
  doi = {10.1109/DigitalHeritage.2015.7413881}
 }
@@ -58,6 +69,20 @@
  publisher = {{ICOM Schweiz}},
  isbn = {978-3-9523484-5-1},
  editor = {Miedler, Edmund}
+}
+
+
+@inproceedings{Nielsen.1994,
+ author = {Nielsen, Jakob},
+ title = {Enhancing the explanatory power of usability heuristics},
+ pages = {152--158},
+ publisher = {{ACM Press}},
+ isbn = {0897916506},
+ editor = {Adelson, Beth and Dumais, Susan and Olson, Judith},
+ booktitle = {Proceedings of the SIGCHI conference on Human factors in computing systems celebrating interdependence - CHI '94},
+ year = {1994},
+ address = {New York, New York, USA},
+ doi = {10.1145/191666.191729}
 }
 
 
