--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -120,9 +120,17 @@
 \selectlanguage{ngerman}
 
 \section{Einleitung}
+%Einführung Thema interesse wecken zitat, kontroverse aktualität relevanz
+Ein Museum ist ein Ort, in dem Wissen und Zeitzeugnisse unterschiedlichster Art für die Öffentlichkeit zur Verfügung stehen. Dabei trägt der Kurator die Verantwortung für die Präsentation der Exponate. Dieser Herausforderung können Kuratoren mit Hilfe von modernen Technologien gerecht werden. Eine Idee ist die Visualisierung des Museums, sodass die Exponate unabhängig von Ort und Zeit für die Besucher durch eine dreidimensionale Darstellung erlebbar wird. Um den Ansprüchen der Museumsbesucher in einem virtuellen Museum gerecht zu werden, wird in dieser Arbeit zunächst erörtert, wer die Stakeholder sind und welches Interesse sie an einem Museum haben. Daraus werden Ziele formuliert, die für das virtuelle Museum Anwendung finden sollen. Die Recherche über die technologischen Möglichkeiten zur Virtualisierung eines Museums dienen der Orientierung an bereits bestehende Projekte und zur Ideenentwicklung. Anhand dessen wurde eine Fokusgruppe gebildet. Der Schwerpunkt der Fokusgruppe lag auf Interaktionsmöglichkeiten innerhalb eines virtuellen Museums. Aus der Fokusgruppe wurden die Anforderungen und Funktionen an ein virtuelles Museum abgeleitet. Daran anknüpfend werden vier Papierprototypen vorgestellt, die aus den Ergebnissen der Fokusgruppe gestaltet wurden. Die heuristische Evaluation wurde an zwei Prototypen durchgeführt, um Probleme in der Usability herauszufiltern. Weiterhin werden die daraus gewonnen Erkenntnisse für die Umsetzung eines digitalen Prototypen zusammengefasst. Feature und Ziele in Bezug zur User Experience werden formuliert und als digitaler Prototyp umgesetzt. Abschließend erfolgt eine kritische Betrachtung des Vorgehens und der Ergebnisse dieser Arbeit.\\
+
+%darstellung vorgehen
+
 \section{Anforderungsanalyse}
+In diesem Kapitel werden die Ziele, Anwendungsfälle und der Nutzungskontext eines virtuellen Museums erörtert. Anhand der Analyse bestehender Projekte und der Durchführung einer Fokusgruppe wird die Grundlage gelegt für die Entwicklung eines virtuellen Museums.\\
+
 \subsection{Anwendungsfälle und Nutzungskontext} \label{sect:anwendung}
-Laut Miedler (2010) ist ein Museum eine Einrichtung für die Öffentlichkeit, die  Zeugnisse von Umwelt und Menschen zu Bildungs- und Forschungszwecken zur Verfügung stellt und aufbewahrt. Die Zeugnisse von Umwelt und Menschen können sehr vielfältig sein. Dabei kann es sich um Bauarten wie Schlösser, Burgen und Kunstobjekte aus der Malerei oder Fotografie oder naturwissenschaftliche oder technische Erzeugnisse handeln. Somit lassen sich Museen in verschiedene Arten einteilen, wie in Burg-, Schloss und Kunstmuseum oder technisches oder naturkundliches Museum. Nicht nur der Bildungs- und Forschungszweck eines Museums soll erfüllt werden, sondern das Erleben der Zeugnisse soll innerhalb einer Ausstellung erreicht werden. Ausstellungen können dabei dauerhaft oder wechselnd kuratiert werden, wobei sie je nach Art des Museums an einem bestimmten Ort gebunden sind. Aufgrund der Vielzahl von Museumsarten und dem Zweck des Bildungs- und Forschungsauftrages, besitzen Museen eine weitgefasste Zielgruppe. Daraus entstehen Interessengruppen, die sich aus der jeweiligen Art des Museums oder aus verschiedenen Berufsgruppen wie Lehrer, Schüler, Studenten oder Museumsmitarbeiter wie Kuratoren oder Archivare ergeben\cite[S. 29]{Miedler.2010}.\\ 
+Laut Miedler (2010) ist ein Museum eine Einrichtung für die Öffentlich-
+keit, die  Zeugnisse von Umwelt und Menschen zu Bildungs- und Forschungszwecken zur Verfügung stellt und aufbewahrt. Die Zeugnisse von Umwelt und Menschen können sehr vielfältig sein. Dabei kann es sich um Bauarten wie Schlösser, Burgen und Kunstobjekte aus der Malerei oder Fotografie oder naturwissenschaftliche oder technische Erzeugnisse handeln. Somit lassen sich Museen in verschiedene Arten einteilen, wie in Burg-, Schloss und Kunstmuseum oder technisches oder naturkundliches Museum. Nicht nur der Bildungs- und Forschungszweck eines Museums soll erfüllt werden, sondern das Erleben der Zeugnisse soll innerhalb einer Ausstellung erreicht werden. Ausstellungen können dabei dauerhaft oder wechselnd kuratiert werden, wobei sie je nach Art des Museums an einem bestimmten Ort gebunden sind. Aufgrund der Vielzahl von Museumsarten und dem Zweck des Bildungs- und Forschungsauftrages, besitzen Museen eine weitgefasste Zielgruppe. Daraus entstehen Interessengruppen, die sich aus der jeweiligen Art des Museums oder aus verschiedenen Berufsgruppen wie Lehrer, Schüler, Studenten oder Museumsmitarbeiter wie Kuratoren oder Archivare ergeben\cite[S. 29]{Miedler.2010}.\\ 
 
 In der Tabelle \ref{tab:stake} werden die Stakeholder des Systems zusammengefasst. Sie beschreibt, welches Interesse und welchen Einfluss die Stakeholder auf das System haben.\\
 
@@ -283,7 +291,7 @@ zeigt den Wunsch VR-Technologien für ein virtuelles Museum anzuwenden, indem in
 
 Im nächsten Abschnitt wird beschrieben, wie die gewonnen Erkenntnisse über die Anforderungen eines virtuellen Museums in Form eines Papierprototypen umgesetzt werden.
 
-\section{Prototyping: Low Fidelity}
+\section{Prototyping: low-fidelity} \label{chapt:low}
 Insgesamt wurden vier Prototypen entwickelt, die im Kapitel \nameref{chapt:paperprotos} vorgestellt werden. Für die Umsetzung wurden Anwendungen für das Museum für Naturkunde hergestellt. Aufgrund der Ergebnisse der Fokusgruppe sind vier unterschiedliche Anwendungen entstanden, wovon drei AR Anwendungen sind. Für die heuristische Evaluation wurden zwei Prototypen ausgewählt. Eine gute Gebrauchstauglichkeit ist gegeben, wenn mit dem System die Ziele erreicht werden können. Mit Hilfe der heuristischen Evaluation soll die Gebrauchstauglichkeit anhand der Heuristiken von Nielson (1994) ermittelt werden \cite{Nielsen.1994}.\\
  
 \subsection{Papierprototypen und deren Designentscheidung} \label{chapt:paperprotos}
@@ -427,8 +435,8 @@ Nach der Durchführung der heuristischen Evaluation entstand die Idee, die Funkt
 
 Beim Nutzer soll die Neugier geweckt werden das Exponat zu erkunden. Der Entdeckergeist soll durch Freude geweckt werden. Durch die zwei Modi das Anzeigen von Informationen und das Ansehen des Exponats, kann dem Bedürfnis nach Informationen entsprochen werden. Durch das Betrachten des Exponats durch Zoomen und Drehen soll ein Interesse nach mehr Informationen geweckt werden. Das explorative Vorgehen steht bei der Verwendung des TIs im Vordergrund. Dabei wird ein haptisches Empfinden und eine Art direkter Kontakt durch das Drücken des TIs hergestellt, sodass der Nutzer das Gefühl bekommt, sich direkt in das Exponat hinein versetzen zu können.\\
 
-\section{Prototyping: High Fidelity}
-Nach der heuristischen Evaluation konnten die umzusetzenden Feature und Ziele zum Erreichen der User Experience definiert werden. In diesem Kapitel wird dargestellt, welche Funktionen und Änderungen für den High Fidelity Prototypen im Vergleich zu dem Papierprototypen vorgenommen wurden.\\
+\section{Prototyping: high-fidelity}
+Nach der heuristischen Evaluation konnten die umzusetzenden Feature und Ziele zum Erreichen der User Experience definiert werden. In diesem Kapitel wird dargestellt, welche Funktionen und Änderungen für den high-fidelity Prototypen im Vergleich zu dem Papierprototypen vorgenommen wurden.\\
 
 \subsection{Umsetzung des Papierprototypen}
 Zunächst wurden die grundlegenden Ideen des ersten und vierten Prototypen in einem Prototypen zusammengeführt. Hauptsächlich steht das TIs im Fokus mit dem Exponate entdeckt und neue Informationen entdeckt werden können. Daraus wurden folgende Feature entwickelt:
@@ -457,9 +465,9 @@ Durch das TI soll die User Experience mit folgenden Zielen umgesetzt werden:
 
 Die Papierprototypen wurden nicht nur mit den Funktionen der Informationsanzeige, der Betrachtung von 3D-Objekten und dem Interagieren über ein TI zusammengeführt, sondern auch verändert. Aus der AR-Anwendung ist eine Desktopanwendung entstanden, die mit einem TI gesteuert werden kann. Für das Museum soll der Desktop als Terminal mit Leinwand umgesetzt werden, sodass auch Zuschauer partizipieren können und somit Interesse für das Exponat geweckt wird.\\
 
-Um den Nutzern die Anwendung näher zu bringen, werden im nächsten Abschnitt die Use Cases skizziert, die mit der Anwendung im High Fidelity Status vollzogen werden können.\\
+Um den Nutzern die Anwendung näher zu bringen, werden im nächsten Abschnitt die Use Cases skizziert, die mit der Anwendung im high-fidelity Status vollzogen werden können.\\
 
-\subsection{Anwendungsfälle für den High Fidelity Prototypen}
+\subsection{Anwendungsfälle für den high-fidelity Prototypen}
 Die Aufgabe des Nutzers besteht hauptsächlich darin, dass TI in seiner Handhabung zu erlernen und das Exponat auf zwei Arten zu erkunden. Zum einen soll das Exponat in seiner Tiefe betrachtet werden. Insbesondere Details wie die Anzahl der Fußknochen durch selbstständiges Zählen oder das Erkennen der Knochenstruktur am Beispiel Archeopteryx. Um das Wissen des Nutzers zu vertiefen, soll über den Modus der Informationsanzeige weiteres Informationsmaterial visualisiert werden.\\ 
 
 Daraus ergeben sich folgende zwei Aufgaben für den Nutzer:
@@ -473,6 +481,7 @@ Daraus ergeben sich folgende zwei Aufgaben für den Nutzer:
 In der Bedienung des TIs ist die Funktion des Zooms durch festes Drücken kritisch zu sehen. Da das Interface gehalten werden muss, um den entsprechenden Zoommodus beizubehalten, ist das Entdecken erschwert. Eine Variante ist das TI so zu gestalten, dass es seine Form beibehalten kann und der Zoommodus fixiert ist.\\
 
 \section{Zusammenfassung}
+Die Analyse der bestehenden Systeme ergab, dass es die Technologien 3D-Druck, AR und VR ermöglichen, ein virtuelles Museum auf unterschiedlichste Art und Weise entstehen zu lassen. Eine Fokusgruppe beschäftigte sich mit dem Schwerpunkt, welche Interaktionsmöglichkeiten im Museum möglich sind. Die Interaktion innerhalb eines virtuellen Museums ist mit TIs denkbar. Durch ein Objekt in der Hand eines Museumsbesuchers können virtuelle deidimensional dargestellte Exponate bewegt und gesteuert werden. Weiterhin wurde festgestellt, dass die Technologie AR ein Museum ergänzen kann. Aus den definierten Zielen der Anwendungsfälle, sowie aus Ergebnissen der Fokusgruppe resultieren die Funktionen zur Entwicklung eines Systems. Sie wurden in Form eines Papierprototypen umgesetzt. Es entstanden vier Papierprototypen, wobei zwei für die heuristische Analyse verwendet wurden. Entstanden sind zwei AR-Anwendungen für ein Naturkundemuseum und ein TI zur Steuerung der Objekte. Nach der Durchführung der heuristischen Analyse konnten neue Ziele anhand der gefundenen  Probleme in der Usability bezüglich der User Experience und Feature für den digitalen Prototypen formuliert werden. Das Ergebnis ist ein digitaler Prototyp, der Anwendung in einem Museum finden kann, um Exponate mit Hilfe eines TI erkunden zu können.\\ 
 
 
 \newpage
