first avaluation description

--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -480,6 +480,37 @@ Daraus ergeben sich folgende zwei Aufgaben für den Nutzer:
 \subsection{Kritische Betrachtung}
 In der Bedienung des TIs ist die Funktion des Zooms durch festes Drücken kritisch zu sehen. Da das Interface gehalten werden muss, um den entsprechenden Zoommodus beizubehalten, ist das Entdecken erschwert. Eine Variante ist das TI so zu gestalten, dass es seine Form beibehalten kann und der Zoommodus fixiert ist.\\
 
+\section{Evaluation}
+Bei der Evaluation wurden die Bögen für den Isometric und den NasaTLX gewählt. Aufgrund der hohen Zuverlässigkeit des Isometric und der hohe Verwendungsgrad des NasaTLX in HCI Studien, viel die Wahl auf diese beiden Evaluationsbägen.\\
+
+\subsection{Evaluationsauswertung}
+Die Ergebnisse nach der Auswertung der Evaluationsbögen mittels gegebener Exceltabellen und Diagramme, werden in den folgenden Bildern deutlich. Eine Erläuterung erfolgt danach.
+
+Als erstes werden die gemittelten Werte des Isometric dargelegt.
+\begin{figure}[H]
+	\centering
+	\includegraphics[angle=0,scale=1]{iso_metric_result}
+	\caption{Resultat der Isometric Auswertung}
+	\label{fig:result1}
+\end{figure}
+
+Als nächstes ist das Diagram zu den gemittelten Werten angegeben
+\begin{figure}[H]
+	\centering
+	\includegraphics[angle=0,scale=0.6]{iso_metric_diagram}
+	\caption{Resultat des Isometric Diagramms}
+	\label{fig:result2}
+\end{figure}
+
+Und zuletzt die Auswertung als Diagramm aus dem NasaTLX Auswertungsbogen.
+\begin{figure}[H]
+	\centering
+	\includegraphics[angle=0,scale=0.4]{nasatlx_diagram}
+	\caption{Resultat des NasaTLX Diagramms}
+	\label{fig:result3}
+\end{figure}
+
+
 \section{Zusammenfassung}
 Die Analyse der bestehenden Systeme ergab, dass es die Technologien 3D-Druck, AR und VR ermöglichen, ein virtuelles Museum auf unterschiedlichste Art und Weise entstehen zu lassen. Eine Fokusgruppe beschäftigte sich mit dem Schwerpunkt, welche Interaktionsmöglichkeiten im Museum möglich sind. Die Interaktion innerhalb eines virtuellen Museums ist mit TIs denkbar. Durch ein Objekt in der Hand eines Museumsbesuchers können virtuelle deidimensional dargestellte Exponate bewegt und gesteuert werden. Weiterhin wurde festgestellt, dass die Technologie AR ein Museum ergänzen kann. Aus den definierten Zielen der Anwendungsfälle, sowie aus Ergebnissen der Fokusgruppe resultieren die Funktionen zur Entwicklung eines Systems. Sie wurden in Form eines Papierprototypen umgesetzt. Es entstanden vier Papierprototypen, wobei zwei für die heuristische Analyse verwendet wurden. Entstanden sind zwei AR-Anwendungen für ein Naturkundemuseum und ein TI zur Steuerung der Objekte. Nach der Durchführung der heuristischen Analyse konnten neue Ziele anhand der gefundenen  Probleme in der Usability bezüglich der User Experience und Feature für den digitalen Prototypen formuliert werden. Das Ergebnis ist ein digitaler Prototyp, der Anwendung in einem Museum finden kann, um Exponate mit Hilfe eines TI erkunden zu können.\\ 
 
