first attrakdiff description

--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -510,6 +510,22 @@ Und zuletzt die Auswertung als Diagramm aus dem NasaTLX Auswertungsbogen.
 	\label{fig:result3}
 \end{figure}
 
+\subsection{deskriptive Statistik}
+Die hiermit verwendeten Auswertungskriterien beziehen sich auf die zentrale Tendenz, Variabilität und der Verteilungsform. Die zugrundeliegenden Erhebungswerte werden aus dem Bögen des Isometric und des NasaTLX verwendet.
+
+
+\subsection{AttrakDiff}
+Mit dem AttrakDiff Fragebogen wurde die Beurteiling der Interaktionstechnik durchgefühht. Es wurde ebenso versucht die Qualität der Nutzererfahrung zu ermitteln. Vorallem war hier vordergründig die Nutzererfahrung im Zusammenspiel mit dem Tangible Interface interessant und ob das TI dem Nutzer einen Mehrwert bringt.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[angle=0,scale=0.6]{attrakdiff_result}
+	\caption{Ergebnis des AttrakDiff Fragebogens}
+	\label{fig:result4}
+\end{figure}
+
+Nach erstmaligem betrachten der Auswertung zeigt sich ein eher verhaltenes Ergebnis.
+
 
 \section{Zusammenfassung}
 Die Analyse der bestehenden Systeme ergab, dass es die Technologien 3D-Druck, AR und VR ermöglichen, ein virtuelles Museum auf unterschiedlichste Art und Weise entstehen zu lassen. Eine Fokusgruppe beschäftigte sich mit dem Schwerpunkt, welche Interaktionsmöglichkeiten im Museum möglich sind. Die Interaktion innerhalb eines virtuellen Museums ist mit TIs denkbar. Durch ein Objekt in der Hand eines Museumsbesuchers können virtuelle deidimensional dargestellte Exponate bewegt und gesteuert werden. Weiterhin wurde festgestellt, dass die Technologie AR ein Museum ergänzen kann. Aus den definierten Zielen der Anwendungsfälle, sowie aus Ergebnissen der Fokusgruppe resultieren die Funktionen zur Entwicklung eines Systems. Sie wurden in Form eines Papierprototypen umgesetzt. Es entstanden vier Papierprototypen, wobei zwei für die heuristische Analyse verwendet wurden. Entstanden sind zwei AR-Anwendungen für ein Naturkundemuseum und ein TI zur Steuerung der Objekte. Nach der Durchführung der heuristischen Analyse konnten neue Ziele anhand der gefundenen  Probleme in der Usability bezüglich der User Experience und Feature für den digitalen Prototypen formuliert werden. Das Ergebnis ist ein digitaler Prototyp, der Anwendung in einem Museum finden kann, um Exponate mit Hilfe eines TI erkunden zu können.\\ 
