--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -511,7 +511,9 @@ Und zuletzt die Auswertung als Diagramm aus dem NasaTLX Auswertungsbogen.
 \end{figure}
 
 \subsection{deskriptive Statistik}
-Die hiermit verwendeten Auswertungskriterien beziehen sich auf die zentrale Tendenz, Variabilität und der Verteilungsform. Die zugrundeliegenden Erhebungswerte werden aus dem Bögen des Isometric und des NasaTLX verwendet.
+Die hiermit verwendeten Auswertungskriterien beziehen sich auf die zentrale Tendenz, Variabilität und der Verteilungsform. Die zugrundeliegenden Erhebungswerte werden aus den Bögen des Isometric und des NasaTLX verwendet.
+
+- Führen Sie eine statistsiche Auswertung mittels deskriptive Verfahren aus und diskutieren Sie diese (mindestens zentrale Tendenz und Variabilität). Stellen Sie die Ergebnisse grafisch dar.\\
 
 
 \subsection{AttrakDiff}
@@ -524,8 +526,27 @@ Mit dem AttrakDiff Fragebogen wurde die Beurteiling der Interaktionstechnik durc
 	\label{fig:result4}
 \end{figure}
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[angle=0,scale=0.6]{attrakdiff_result2}
+	\caption{Medianbildung des AttrakDiff Fragebogens}
+	\label{fig:result5}
+\end{figure}
+
 Nach erstmaligem betrachten der Auswertung zeigt sich ein eher verhaltenes Ergebnis.
 
+- AttrakDiff Fragebogen auswerten, begründen, dass wir "user experience" verwendet haben und das Tangible Interface
+
+
+\subsection{Resultat}
+Nach kritischer Betrachtung der Ergebnisse, scheint die Anwendung insgesamt mangelhaft.
+
+- Diskutieren Sie die Ergebnisse mit Hinblick auf den Erfolg der Projektidee und mögliche Weiterentwicklungen.\\
+
+
+- Dokumentieren und interpretieren Sie die Ergebnisse unter Bezugnahme auf Inhalte der Vorlesung
+
+6 Seiten sind gut!
 
 \section{Zusammenfassung}
 Die Analyse der bestehenden Systeme ergab, dass es die Technologien 3D-Druck, AR und VR ermöglichen, ein virtuelles Museum auf unterschiedlichste Art und Weise entstehen zu lassen. Eine Fokusgruppe beschäftigte sich mit dem Schwerpunkt, welche Interaktionsmöglichkeiten im Museum möglich sind. Die Interaktion innerhalb eines virtuellen Museums ist mit TIs denkbar. Durch ein Objekt in der Hand eines Museumsbesuchers können virtuelle deidimensional dargestellte Exponate bewegt und gesteuert werden. Weiterhin wurde festgestellt, dass die Technologie AR ein Museum ergänzen kann. Aus den definierten Zielen der Anwendungsfälle, sowie aus Ergebnissen der Fokusgruppe resultieren die Funktionen zur Entwicklung eines Systems. Sie wurden in Form eines Papierprototypen umgesetzt. Es entstanden vier Papierprototypen, wobei zwei für die heuristische Analyse verwendet wurden. Entstanden sind zwei AR-Anwendungen für ein Naturkundemuseum und ein TI zur Steuerung der Objekte. Nach der Durchführung der heuristischen Analyse konnten neue Ziele anhand der gefundenen  Probleme in der Usability bezüglich der User Experience und Feature für den digitalen Prototypen formuliert werden. Das Ergebnis ist ein digitaler Prototyp, der Anwendung in einem Museum finden kann, um Exponate mit Hilfe eines TI erkunden zu können.\\ 
